09-LEGACY-DOCS/extraction_log.txt
  File "/Users/akshitsethi/Desktop/astro/astrology-learning/extraction-system/pdf_extractor.py", line 273
    md_path = self.output_dir / f"{book_name}_summary.md"
    ^^^^^^^
IndentationError: expected an indented block after 'with' statement on line 270
